UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Business_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Name__c</fullName>
    <label>Business Group Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>