UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Caller_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_ID_Name__c</fullName>
    <label>Caller ID Name</label>
    <type>Phone</type>
</CustomField>