UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Construction_Details__c.field-meta.xml
<CustomField>
    <fullName>Construction_Details__c</fullName>
    <label>Construction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>