UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Custom_music__c.field-meta.xml
<CustomField>
    <fullName>Custom_music__c</fullName>
    <label>Custom music</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>