UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/EAS_Pin__c.field-meta.xml
<CustomField>
    <fullName>EAS_Pin__c</fullName>
    <label>EAS Pin</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>