UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip__c</fullName>
    <label>Location Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>