UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Main_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Phone_Number__c</fullName>
    <label>Main Phone #</label>
    <type>Phone</type>
</CustomField>