UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/New_Construction__c.field-meta.xml
<CustomField>
    <fullName>New_Construction__c</fullName>
    <label>New Construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>