UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>