UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/fields/Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Different address</fullName>
                <default>true</default>
                <label>Different address</label>
            </value>
            <value>
                <fullName>Same as service location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>