UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Name__c</columns>
    <columns>Location_Address__c</columns>
    <columns>Shipping_Location__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>New_Construction__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Caller_ID_Name__c</columns>
    <columns>Custom_music__c</columns>
    <columns>Construction_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>